--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,9 @@ jobs:
       
       - uses: actions/checkout@v4
       - name: Build image
-        run: docker build -t handes007/portfolio .
+        run: docker build -t ${{secrets.REGISTRY_USERNAME}}/portfolio .
  
       - name: Push image
         run: |
-          docker login -u handes007 -p ${{ secrets.REGISTRY_PASSWORD}}
-          docker push handes007/portfolio
+          docker login -u ${{secrets.REGISTRY_USERNAME}} -p ${{ secrets.REGISTRY_PASSWORD}}
+          docker push ${{secrets.REGISTRY_USERNAME}}/portfolio
