--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,18 @@ jobs:
           docker login -u ${{secrets.REGISTRY_USERNAME}} -p ${{ secrets.REGISTRY_PASSWORD}}
           docker push ${{secrets.REGISTRY_USERNAME}}/portfolio:${{github.run_number}}
           docker push ${{secrets.REGISTRY_USERNAME}}/portfolio
+  
+          
+deploy:
+  needs: build
+  runs-on: ubuntu-latest
+  steps:
+    - name: SSH to Server
+      uses: appleboy/ssh-action@v0.1.5
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.KEY }}
+        script: |
+          docker rm -f resume
+          docker run -d --name resume -p 8080:5001 ${{secrets.REGISTRY_USERNAME}}/portfolio:${{github.run_number}}
